# qucsator

./: CMakeLists.txt  FAQ.md
src/: CMakeLists.txt  MakeList  acsolver.cpp  analyses.h  applications.h  eqnsys.h  hash.h  hbsolver.cpp  logging.h  module.cpp  nasolver.h  states.h  tmatrix.h  tridiag.h  tvector.h  ucs.cpp  vector.h
src/components/: CMakeLists.txt  MakeList  components.h
src/components/devices/: CMakeLists.txt
src/components/digital/: CMakeLists.txt
src/components/microstrip/: CMakeLists.txt
src/components/verilog/: CMakeLists.txt  MakeList
src/converter/: CMakeLists.txt
src/interface/: CMakeLists.txt  MakeList
src/math/: CMakeLists.txt  real.h
